--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -169,6 +169,39 @@ ru:
     th_2: Цена
     td_1: от
     td_2: грн.
+    p1: "Ценовая политика в швейном ателье формируется на основе множества факторов и может варьироваться
+        в зависимости от конкретных требований заказчика. Окончательная стоимость услуг иногда может
+        значительно отличаться от указанной изначально, поэтому все приводимые цены стоит считать
+        ориентировочными. Походы в ателье часто начинаются с консультации,
+        где заранее обсуждаются все детали проекта."
+    p2: "Основные факторы, влияющие на стоимость услуг в швейном ателье:"
+    ul:
+      b_1: "Тип материала: "
+      li_1: "Работа с деликатными или сложными тканями, например шелком или кожей,
+            требует от мастера высоких навыков и опыта, что, естественно, отражается на цене."
+      b_2: "Сложность кроя: "
+      li_2: "Дизайнерские модели или изделия со сложной конструкцией увеличивают время работы и
+            требуют более тщательной проработки."
+      b_3: "Срочность выполнения заказа: "
+      li_3: "Работа вне очереди или в короткие сроки всегда стоит дороже, поскольку требует от
+            швеи максимальной концентрации и усилий."
+      b_4: "Объем работы: "
+      li_4: "Индивидуальный пошив каждого изделия или массовое производство перекраивает подходы и
+            может заметно отличаться по цене."
+      b_5: "Дополнительные услуги: "
+      li_5: "Такие как вышивка, фурнитура или использование декораций увеличивают стоимость,
+            но придают изделию уникальность."
+      b_6: "Профессиональный уровень мастера: "
+      li_6: "Опытные швеи оценивают свою работу выше, но и качество исполнения гарантируют, что привлекает клиентов,
+            ищущих эксклюзивность и идеальное исполнение."
+      b_7: "Технологические особенности: "
+      li_7: "Использование современного оборудования может ускорить процесс и повлиять на качество изготовления,
+            что также отразится в цене."
+    p3: "Каждое ателье старается найти баланс между качеством услуг и возможностями клиента,
+        поэтому всегда важно выяснить все интересующие моменты и задать вопросы,
+        чтобы избежать недопонимания."
+    p4: "Обращайтесь в наше швейное ателье ☞ДРУЖБА☜ и получите уникальное, полностью отвечающее вашим ожиданиям,
+        изделия, где каждая деталь будет подобрана в соответствии с вашими предпочтениями."
 
   faq:
     h1: Часто задаваемые вопросы
@@ -198,8 +231,13 @@ ru:
     q6: Совпадают ли ваши цены на сайте с реальными ценами?
     a6: Мы обновляем цены на сайте согласно тем ценам, которые сейчас фактически,
         поэтому цены на сайте актуальны на любой момент времени, если бы вы их не посмотрели.
-    q7: Сколько времени занимает ремонт или пошив одежды?
-    a7: Время ремонта зависит от сложности работы. В среднем время ремонта занимает 1-2 дня.
+    q7: Почему ваши цены указаны в пределах "от", а нет конкретно установленной цены?
+    a7: На ценообразование в швейном ателье влияет множество
+    a7_1: факторов
+    a7_2: ", поэтому окончательную цену можно озвучить только после осмотра вашего заказа и определившись
+          с объемами работ по нему." 
+    q8: Сколько времени занимает ремонт или пошив одежды?
+    a8: Время ремонта зависит от сложности работы. В среднем время ремонта занимает 1-2 дня.
         Время выполнения работ по индивидуальному пошиву одежды обсуждается с каждым клиентом лично.
     p1: Если у вас еще остались вопросы, заполните
     p2: форму
