--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -167,6 +167,39 @@ uk:
     th_2: Ціна
     td_1: від
     td_2: грн.
+    p1: "Цінова політика у швейному ательє формується на основі безлічі факторів і може змінюватись
+        залежно від конкретних вимог замовника. Остаточна вартість послуг іноді може
+        значно відрізнятися від зазначеної спочатку, тому всі ціни, що наводяться, варто вважати
+        орієнтовними. Походи в ательє часто починаються з консультації,
+        де заздалегідь обговорюються всі деталі проекту."
+    p2: "Основні фактори, що впливають на вартість послуг у швейному ательє:"
+    ul:
+      b_1: "Тип матеріалу:"
+      li_1: "Робота з делікатними або складними тканинами, наприклад шовком або шкірою,
+            вимагає від майстра високих навичок та досвіду, що, природно, відбивається на ціні."
+      b_2: "Складність крою:"
+      li_2: "Дизайнерські моделі або вироби зі складною конструкцією збільшують час роботи та
+            вимагають більш ретельного опрацювання."
+      b_3: "Терміновість виконання замовлення:"
+      li_3: "Робота поза чергою або в короткий термін завжди коштує дорожче, оскільки вимагає від
+            швачки максимальної концентрації та зусиль."
+      b_4: "Обсяг роботи: "
+      li_4: "Індивідуальне пошиття кожного виробу або масове виробництво перекроює підходи та
+            може помітно відрізнятися за ціною."
+      b_5: "Додаткові послуги:"
+      li_5: "Такі як вишивка, фурнітура або використання декорацій збільшують вартість,
+            але надають виробу унікальність."
+      b_6: "Професійний рівень майстра:"
+      li_6: "Дослідні швачки оцінюють свою роботу вище, але і якість виконання гарантують, що приваблює клієнтів,
+            шукають ексклюзивність та ідеальне виконання."
+      b_7: "Технологічні особливості:"
+      li_7: "Використання сучасного обладнання може прискорити процес та вплинути на якість виготовлення,
+            що також відіб'ється в ціні."
+    p3: "Кожне ательє намагається знайти баланс між якістю послуг та можливостями клієнта,
+        тому завжди важливо з'ясувати всі моменти, що цікавлять, і поставити питання,
+        щоб уникнути непорозуміння."
+    p4: "Звертайтеся до нашого швейного ательє ☞ДРУЖБА☜ і отримайте унікальне, що повністю відповідає вашим очікуванням,
+        вироби, де кожна деталь буде підібрана відповідно до ваших уподобань."
 
   faq:
     h1: Найчастіші питання
@@ -196,8 +229,13 @@ uk:
     q6: Чи співпадають ваші ціни на сайті з реальними цінами?
     a6: Ми оновляємо ціни на сайті згідно тих цін, котрі зараз є фактично,
         тому цини на сайті актуальні на будь який момент часу, коли б ви їх не подивились.
-    q7: Скільки по часу займає ремонт або пошив одягу?
-    a7: Час ремонту залежить від складності роботи. У середньому час ремонту займає 1-2 дня.
+    q7: Чому ваші ціни вказані в межах "від", а немає конкретно встановленої ціни?
+    a7: На ціноутворення у швейному ательє впливає багато
+    a7_1: факторів
+    a7_2: ", тому остаточну ціну можна озвучити лише після огляду вашого замовлення та визначившись
+        з обсягами робіт у ньому."
+    q8: Скільки по часу займає ремонт або пошив одягу?
+    a8: Час ремонту залежить від складності роботи. У середньому час ремонту займає 1-2 дня.
         Часи виконання робіт по індивідуальному пошиву одягу обговорюється з кожним клієнтом особисто.
     p1: Якщо у вас ще залишились запитання, заповніть
     p2: форму
