--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -213,7 +213,7 @@ ru:
     q2: Сколько мне будет стоить исправить испорченный или поврежденный язык?
     a2: Расчет конечного качества зависит от сложности ремонта. Посмотрите ориентировочные
     a2_1: цены
-    a2_2: ремонт одежды.
+    a2_2: на ремонт одежды.
     q3: Я могу у вас заказать пошив какой-то вещи индивидуально?
     a3: Конечно. Мы занимаемся индивидуальным пошивом платьев, брюк, юбок, джинсов, пальто и т.д.
         С полным перечнем услуг можно ознакомиться в соответствующем
@@ -224,8 +224,8 @@ ru:
         качество и количество материалов; срочность пошива. Посмотрите ориентировочные
     a4_1: цены
     a4_2: на индивидуальный пошив одежды.
-    q5: Вы работаете с материалами заказчика для пошива одежды?
-    a5: Да. После консультации и снятия мерок вы можете приобрести необходимое количество ткани и фурнитуры,
+    q5: Вы работаете с материалами заказчика для пошива одежды или нужно будет поккупать материалы у вас?
+    a5: Мы не занимаемся продажей тканей. После консультации и снятия мерок вы можете приобрести необходимое количество ткани и фурнитуры,
         и предоставить нам для работы.
         Мы также можем приобрести необходимые материалы для вас.
     q6: Совпадают ли ваши цены на сайте с реальными ценами?
@@ -271,6 +271,20 @@ ru:
           (около 150 метров)."
     p_9: Как доехать с направления 95-го квартала и Соцгорода
     p_10: Как доехать с направления железнодорожного вокзала Кривой Рог - Главный
+    p_11: "Добро пожаловать на наш раздел "Контакты"!
+          Мы всегда рады помочь и ответить на все ваши вопросы. Не стесняйтесь связаться с нами,
+          если у вас есть любые предложения, замечания или комментарии."
+    p_12: "Наша цель — быть доступными и предоставить вам необходимую информацию, когда она вам нужна.
+          Связаться с нами можно различными способами, и мы предлагаем несколько каналов для вашего
+          удобства. Мы будем рады, если вы посетите нас лично, или воспользуетесь кнопкой обратной
+          связи для отправки сообщения."
+    p_13: "Мы гордимся тем, что поддерживаем связи с нашими клиентами и партнерами. Независимо от того,
+          являетесь ли вы заказчиком или же просто интересуетесь нашими услугами,
+          мы готовы подробно обсудить любые вопросы, которые могут возникнуть."
+    p_14: "Мы уверены, что наш опыт и забота о клиентах помогут вам получить лучшие впечатления.
+          Пожалуйста, используйте представленные контакты, чтобы обратиться к нужному специалисту.
+          Мы стремимся ответить вам как можно быстрее."
+
 
   articles:
     h1: Наш блог
