--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -212,7 +212,7 @@ uk:
     a2: Розрахунок кінцевої якості залежить від складності ремонту. Подивіться орієнтовні
     a2_1: ціни
     a2_2: на ремонт одягу.
-    q3: Я можу в вас заказати пошив якойсь речі індивідуально?
+    q3: Я можу в вас заказати пошив якойсь речі індивідуально ?
     a3: Звісно. Ми займаємось індивідуальним пошивом суконь, брюк, спідниць, джинсів, пальто, тощо.
         З повним перечнем послуг ви можете ознайомитись у відповідному
     a3_1: розділі
@@ -222,8 +222,8 @@ uk:
         якість та кількість матеріалів, терміновість пошиву. Подивіться орієнтовні
     a4_1: ціни
     a4_2: на індивідуальний пошив одягу.
-    q5: Ви працюєте з матеріалами замовника для пошиву одягу?
-    a5: Так. Після консультації та зняття вимірів, ви можете придбати необхідну кількість тканини та фурнітури,
+    q5: Ви працюєте з матеріалами замовника для пошиву одягу, чи потрібно буде купувати матеріали у вас?
+    a5: Ми не займаэмось продажем тканин. Після консультації та зняття вимірів, ви можете придбати необхідну кількість тканини та фурнітури,
         та предоставити нам для роботи.
         Ми також можемо придбати необхідні матеріали за вас.
     q6: Чи співпадають ваші ціни на сайті з реальними цінами?
@@ -269,6 +269,19 @@ uk:
           (близько 150 метрів)."
     p_9: Як доїхати з напрямку 95-го кварталу та Соцгорода
     p_10: Як доїхати з напрямку залізничного вокзалу Кривий Ріг - Головний
+    p_11: "Ласкаво просимо до нашого розділу "Контакти"! Ми завжди раді допомогти та відповісти
+          на всі ваші запитання. Не соромтеся зв'язатися з нами, якщо у вас є будь-які пропозиції,
+          зауваження або коментарі."
+    p_12: "Наша мета – бути доступними та надати вам необхідну інформацію, коли вона вам потрібна.
+          Зв'язатися з нами можна різними способами, і ми пропонуємо кілька каналів для вашої зручності.
+          Ми будемо раді, якщо ви відвідаєте нас особисто, або скористаєтеся кнопкою зворотного
+          зв'язку для надсилання повідомлення."
+    p_13: "Ми пишаємось тим, що підтримуємо зв'язки з нашими клієнтами та партнерами.
+          Незалежно від того, чи є ви замовником або просто цікавитеся нашими послугами,
+          ми готові докладно обговорити будь-які питання, які можуть виникнути."
+    p_14: "Ми впевнені, що наш досвід та турбота про клієнтів допоможуть вам отримати найкращі враження.
+          Будь ласка, використовуйте подані контакти, щоб звернутися до потрібного фахівця.
+          Ми прагнемо відповісти вам якнайшвидше."
 
   articles:
     h1: Наш блог
