--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -271,17 +271,22 @@ ru:
           (около 150 метров)."
     p_9: Как доехать с направления 95-го квартала и Соцгорода
     p_10: Как доехать с направления железнодорожного вокзала Кривой Рог - Главный
-    p_11: "Добро пожаловать на наш раздел "Контакты"!
+    p_11: "Добро пожаловать на наш раздел \"Контакты\"!
           Мы всегда рады помочь и ответить на все ваши вопросы. Не стесняйтесь связаться с нами,
           если у вас есть любые предложения, замечания или комментарии."
     p_12: "Наша цель — быть доступными и предоставить вам необходимую информацию, когда она вам нужна.
           Связаться с нами можно различными способами, и мы предлагаем несколько каналов для вашего
           удобства. Мы будем рады, если вы посетите нас лично, или воспользуетесь кнопкой обратной
           связи для отправки сообщения."
-    p_13: "Мы гордимся тем, что поддерживаем связи с нашими клиентами и партнерами. Независимо от того,
+    p_13: "В нашем офисе всегда тепло и уютно. Мы расположены в удобном месте и можем предложить
+          отличные условия для встреч и консультаций. В том случае, если вы не можете посетить нас лично,
+          вы можете связаться с нами по телефону или электронной почте. Чтобы сделать ваш опыт более
+          комфортным, мы обеспечили множество различных опций связи. Пожалуйста, отмечайте в своих
+          сообщениях все, что кажется важным, и мы постараемся учесть все ваши пожелания."
+    p_14: "Мы гордимся тем, что поддерживаем связи с нашими клиентами и партнерами. Независимо от того,
           являетесь ли вы заказчиком или же просто интересуетесь нашими услугами,
           мы готовы подробно обсудить любые вопросы, которые могут возникнуть."
-    p_14: "Мы уверены, что наш опыт и забота о клиентах помогут вам получить лучшие впечатления.
+    p_15: "Мы уверены, что наш опыт и забота о клиентах помогут вам получить лучшие впечатления.
           Пожалуйста, используйте представленные контакты, чтобы обратиться к нужному специалисту.
           Мы стремимся ответить вам как можно быстрее."
 
