--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -269,17 +269,23 @@ uk:
           (близько 150 метрів)."
     p_9: Як доїхати з напрямку 95-го кварталу та Соцгорода
     p_10: Як доїхати з напрямку залізничного вокзалу Кривий Ріг - Головний
-    p_11: "Ласкаво просимо до нашого розділу "Контакти"! Ми завжди раді допомогти та відповісти
+    p_11: "Ласкаво просимо до нашого розділу \"Контакти\"! Ми завжди раді допомогти та відповісти
           на всі ваші запитання. Не соромтеся зв'язатися з нами, якщо у вас є будь-які пропозиції,
           зауваження або коментарі."
     p_12: "Наша мета – бути доступними та надати вам необхідну інформацію, коли вона вам потрібна.
           Зв'язатися з нами можна різними способами, і ми пропонуємо кілька каналів для вашої зручності.
           Ми будемо раді, якщо ви відвідаєте нас особисто, або скористаєтеся кнопкою зворотного
           зв'язку для надсилання повідомлення."
-    p_13: "Ми пишаємось тим, що підтримуємо зв'язки з нашими клієнтами та партнерами.
+    p_13: "У нашому офісі завжди тепло та затишно. Ми розташовані у зручному місці та можемо
+          запропонувати відмінні умови для зустрічей та консультацій. У разі, якщо ви не можете
+          відвідати нас особисто, ви можете зв'язатися з нами по телефону або електронною поштою.
+          Щоб зробити ваш досвід комфортнішим, ми забезпечили безліч різних опцій зв'язку. Будь ласка,
+          відзначайте у своїх повідомленнях все, що здається важливим, і ми намагатимемося врахувати
+          усі ваші побажання."
+    p_14: "Ми пишаємось тим, що підтримуємо зв'язки з нашими клієнтами та партнерами.
           Незалежно від того, чи є ви замовником або просто цікавитеся нашими послугами,
           ми готові докладно обговорити будь-які питання, які можуть виникнути."
-    p_14: "Ми впевнені, що наш досвід та турбота про клієнтів допоможуть вам отримати найкращі враження.
+    p_15: "Ми впевнені, що наш досвід та турбота про клієнтів допоможуть вам отримати найкращі враження.
           Будь ласка, використовуйте подані контакти, щоб звернутися до потрібного фахівця.
           Ми прагнемо відповісти вам якнайшвидше."
 
