--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -140,13 +140,13 @@ ru:
     back: Вернуться на предыдущую страницу
     dl1:
       dt:
-        alt: "Швейная мастерская ☞ ДРУЖБА ☜ - Всегда быстро и качественно.."
-        p: "Всегда быстро и качественно.."
+        alt: "Швейная мастерская ☞ ДРУЖБА ☜ - Всегда быстро и качественно."
+        p: "Всегда быстро и качественно."
       dd: "Мы предлагаем быстрое и качественное решение по восстановлению ваших любимых вещей."
     dl2:
       dt:
-        alt: "Швейная мастерская ☞ ДРУЖБА ☜ - Опыт и мастерство.."
-        p: "Опыт и мастерство.."
+        alt: "Швейная мастерская ☞ ДРУЖБА ☜ - Опыт и мастерство."
+        p: "Опыт и мастерство."
       dd: "Все наши мастера имеют профильное образование и  смогут отремонтировать любые повреждения,
           от мелких разрывов до сложных переделок."
     dl3:
