--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -138,13 +138,13 @@ uk:
     back: Повернутись на попередню сторінку
     dl1:
       dt:
-        alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Завжди швидко та якісно.."
-        p: "Завжди швидко та якісно.."
+        alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Завжди швидко та якісно."
+        p: "Завжди швидко та якісно."
       dd: "Ми пропонуємо швидке та якісне рішення щодо відновлення ваших улюблених речей."
     dl2:
       dt:
-        alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Досвід та майстерність.."
-        p: "Досвід та майстерність.."
+        alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Досвід та майстерність."
+        p: "Досвід та майстерність."
       dd: "Усі наші майстри мають профільну освіту та зможуть відремонтувати будь-які пошкодження,
           від дрібних розривів до складних переробок."
     dl3:
