--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -136,7 +136,7 @@ ru:
     h1: Наши услуги
     h2_1: Ремонт одежды
     h2_2: Пошив одежды на заказ
-    h3: "Наши работы:"
+    h3: "Статьи по теме:"
     back: Вернуться на предыдущую страницу
     dl1:
       dt:
