--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -134,7 +134,7 @@ uk:
     h1: Наші послуги
     h2_1: Ремонт одягу
     h2_2: Пошив одягу на замовлення
-    h3: "Наші роботи:"
+    h3: "Статті по темі:"
     back: Повернутись на попередню сторінку
     dl1:
       dt:
