--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -5,7 +5,7 @@ ru:
     uk: укр
 
   cookies:
-    p1: "Этот сайт использует cookie Google для анализа трафикаи для показа персонализированной рекламы.
+    p1: "Этот сайт использует cookie для анализа трафикаи для показа персонализированной рекламы.
         Ознакомьтесь с нашей "
     link: политикой конфиденциальности
     p2: ", чтобы узнать больше."
