--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -5,7 +5,7 @@ uk:
     uk: укр
 
   cookies:
-    p1: "Цей сайт використовує cookie Google для аналізу трафіку для показу персоналізованої реклами.
+    p1: "Цей сайт використовує cookie для аналізу трафіку для показу персоналізованої реклами.
         Ознайомтесь з нашою"
     link: політикою конфіденційності
     p2: ", щоб дізнатися більше."
