--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -37,6 +37,9 @@ ru:
       h2: "Ваш стиль - это наша забота!"
       img_alt: "Швейная мастерская ☞ ДРУЖБА ☜"
 
+    examples:
+      h2: "Наши работы"
+
     services:
       h2: "Наши услуги на ремонт одежды"
       card1:
