--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -37,6 +37,9 @@ uk:
       h2: "Ваш стиль – це наша турбота!"
       img_alt: "Швейна майстерня ☞ ДРУЖБА ☜"
 
+    examples:
+      h2: "Наші роботи"
+
     services:
       h2: "Наші послуги на ремонт одягу"
       card1:
