--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -244,7 +244,7 @@ ru:
         Время выполнения работ по индивидуальному пошиву одежды обсуждается с каждым клиентом лично.
     p1: Если у вас еще остались вопросы, заполните
     p2: форму
-    p3: ", и мы обязательно с вами свяжемся, да и дадим ответы на интересующие вас вопросы."
+    p3: ", и мы обязательно с вами свяжемся, и дадим ответы на интересующие вас вопросы."
 
   contacts:
     warning:
