--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -242,7 +242,7 @@ uk:
         Часи виконання робіт по індивідуальному пошиву одягу обговорюється з кожним клієнтом особисто.
     p1: Якщо у вас ще залишились запитання, заповніть
     p2: форму
-    p3: ", і ми обов'язково з вами зв'яжемось, та і дамо відповіді на питання, що вас цікавлять."
+    p3: ", і ми обов'язково з вами зв'яжемось, та дамо відповіді на питання, що вас цікавлять."
 
   contacts:
     warning:
