--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -293,7 +293,7 @@ uk:
           Ми прагнемо відповісти вам якнайшвидше."
 
   articles:
-    h1: Наш блог
+    h1: Наші статті
 
   footer: Швейна майстерня ☞ ДРУЖБА ☜
  
