--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -203,7 +203,7 @@ ru:
     p3: "Каждое ателье старается найти баланс между качеством услуг и возможностями клиента,
         поэтому всегда важно выяснить все интересующие моменты и задать вопросы,
         чтобы избежать недопонимания."
-    p4: "Обращайтесь в наше швейное ателье ☞ДРУЖБА☜ и получите уникальное, полностью отвечающее вашим ожиданиям,
+    p4: "Обращайтесь в наше швейное ателье ☞ДРУЖБА☜ и получите уникальные, полностью отвечающие вашим ожиданиям,
         изделия, где каждая деталь будет подобрана в соответствии с вашими предпочтениями."
 
   faq:
