--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -201,7 +201,7 @@ uk:
     p3: "Кожне ательє намагається знайти баланс між якістю послуг та можливостями клієнта,
         тому завжди важливо з'ясувати всі моменти, що цікавлять, і поставити питання,
         щоб уникнути непорозуміння."
-    p4: "Звертайтеся до нашого швейного ательє ☞ДРУЖБА☜ і отримайте унікальне, що повністю відповідає вашим очікуванням,
+    p4: "Звертайтеся до нашого швейного ательє ☞ДРУЖБА☜ і отримайте унікальні, що повністю відповідають вашим очікуванням,
         вироби, де кожна деталь буде підібрана відповідно до ваших уподобань."
 
   faq:
