--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -253,7 +253,7 @@ uk:
     h1: Як нас знайти
     h2: "Завітайте до нас. Ми завжди вам раді:"
     h3_1: "Наша адреса:"
-    p_1: 50055, вул. Кокчетавська 3, м. Кривий Ріг
+    p_1: 50055, вул. Романа Рибалки (Кокчетавська) 3, м. Кривий Ріг
     h3_2: "Часи роботи:"
     p_2: "Вівторок - Пʼятниця: 9:00 - 17:00"
     h3_3: "Субота: 10:00 - 16:00"
