--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -255,7 +255,7 @@ ru:
     h1: Как нас найти
     h2: "Посетите нас. Мы всегда вам рады:"
     h3_1: "Наш адрес:"
-    p_1: 50055, ул. Кокчетавская 3, г. Кривой Рог
+    p_1: 50055, ул. Романа Рыбалки (Кокчетавская) 3, г. Кривой Рог
     h3_2: "Часы работы:"
     p_2: "Вторник - Пятница: 9:00 - 17:00"
     h3_3: "Суббота: 10:00 - 16:00"
